@@ -1,3 +1,4 @@
+    ADDED: action "Show View Options Menu"
     ADDED: detailed view context-menu option "Automatically Resize Columns"
     ADDED: action "cancel refresh" triggered by ESC by default
     ADDED: change icon size individually per view
